[package]
name = "easyraw"
version = "0.1.1"
authors = ["Genevive <gen@nyble.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
rawproc = { path = "../rawproc" }
image = { version = "0.23", default-features = false, features = ["jpeg", "png"] }
threadpool = "1.8.1"
termion = { version = "1.5.6", optional = true }
give = { path = "../give", optional = true }

[features]
default = ["tui"]
tui = ["termion", "give"]