[package]
name = "dslr-trichrome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.2"
clap = { version = "4.1.4", features = ["derive"] }
kamadak-exif = "0.5.5"
mozjpeg = "0.9.4"
png = "0.17.7"
rand = "0.8.5"
rawproc = { path = "../rawproc" }
neam = { git = "https://github.com/gennyble/neam" }
webp = "0.2.2"

eframe = "0.22.0"
egui = "0.22.0"
resize = "0.7.4"
rfd = "0.11.4"
rgb = "0.8.36"
