[package]
name = "picker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
softbuffer = { git = "https://github.com/rust-windowing/softbuffer" }
winit = "0.28.2"
fluffy = { path = "../fluffy" }
neam = { path = "../../neam/neam" }
